more all over...

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -81,7 +81,7 @@ Throughout this document,  a ``supermajority vote" is defined as a result with m
 
 
 \section{Overall Structure}
-The Governance Structure of the CMB-S4 Collaboration consists of three bodies: a Governing Board (GB), an \exec \ (\shorte) led by two equal co-spokespersons (SP). 
+The Governance Structure of the CMB-S4 Collaboration consists of three bodies: a Governing Board (GB), an \exec \ (\shorte) led by two equal co-spokespersons. 
 Under each of these bodies a number of councils, committees, and working groups are established to ensure timely and efficient conduction of the duties assigned to each body. The overall scope, selection of, and interplay between each of these governing entities is described in the remainder of this document. 
 
 
@@ -188,7 +188,10 @@ The	%scientific
 leadership of the Collaboration resides with two equal co-spokespersons.			
 Each spokesperson participates actively in the management of all aspects of the	Collaboration and, as the executive officials of the Collaboration, both  are responsible for its day-to-day management. 
 To carry out their duties, the spokespersons are expected to solicit advice from the \exec, the GB and the Collaboration at large.  %on scientific, technical, management, financial, and leadership issues.  
-The Spokespersons may appoint up to two members of the \exec. This appointment flexibility will enable the SPs to obtain expert advice on an as-needed, short-term basis for matters including (but not limited to) technical and managerial topics that may be outside the expertise of extant Collaboration members. Such appointees required approval by the GB, 
+
+The Spokespersons may appoint up to two members of the \exec. This appointment flexibility will enable the Spokepersons to obtain expert advice on an as-needed, short-term basis for matters including (but not limited to) technical and managerial topics.
+% that may be outside the expertise of extant Collaboration members. 
+Such appointees require approval by the GB, 
 and may be removed from the \exec\ at the Spokespersons' discretion.  Appointments are limited to two years, but may be renewed with approval of the GB. 
 
 
@@ -213,8 +216,7 @@ Spokesperson responsibilities include, but are not limited to the following:
 
 %Additionally, the co-spokespersons are ex-officio, non-voting members of the Governing Board.  
 %\textit{The Governing Board, via super-majority vote, may amend these duties.} 
-Spokespersons are elected to two-year terms. \textbf{There are no term limits specified prior to the establishment of the Project.  Two term limits are expected to be imposed--- by action of the GB ---after the CMB-S4 Construction Project is firmly established}.  The election process is detailed below in Section \ref{sec:elections}. 
-
+Spokespersons are elected to two-year terms. The election process is detailed below in Section \ref{sec:elections}.   To facilitate interactions of the Collaboration with the agencies and national laboratories, term limits will not be required prior to the establishment of the Project.  Two term limits are expected to be imposed by the GB amendment of the Bylaws after the CMB-S4 Construction Project is firmly established with the Project leadership team in place. 
 
 
 
@@ -223,15 +225,17 @@ Spokespersons are elected to two-year terms. \textbf{There are no term limits sp
 
 \subsection{Scope}
 
-The \exec \ (\shorte) is an elected and appointed board that consists of up to 10 members: the co-spokespersons and the two elected co-chairs of the Science Council, the two co-chairs of the Technical Council, the chair of the Membership Committee, the chair of the Publication and Speakers Committee, and up to two  members appointed by the Spokespersons. The ET is the agile decision-making body in the Collaboration with the ability to address the day-to-day collaboration issues. 
+The \exec \ (\shorte) is an elected and appointed board led by the co-spokespersons. It consists of up to 10 members: the co-spokespersons, the two elected co-chairs of the Science Council, the two co-chairs of the Technical Council, the chair of the Membership Committee, the chair of the Publication and Speakers Committee, and up to two  members appointed by the Spokespersons. The ET is the agile decision-making body in the Collaboration with the ability to address the day-to-day collaboration issues.  The structure of the \shorte is to facilitate the flow of information to the co-spokespersons from the Collaboration and vice versa, as well as to provide a sounding board for the co-spokespersons.
 
 The \exec \ has three main roles:
 \begin{itemize}
-\item to facilitate the flow of information to the co-spokespersons from the Collaboration and vice versa.
+%\item to facilitate the flow of information to the co-spokespersons from the Collaboration and vice versa.
 
-\item to provide leadership on scientific, membership, financial, and organizational decisions and issues. The decisions will ultimately be made by the co-spokespersons, but will be discussed and reasoned through the \exec.  However, any two \shorte members may call for a vote on any topic, and if $\geq 50\%$ of the board is in disagreement with proposed activities of the Spokesperson, the issue is referred to the Governing Board for further discussion. 
+\item to provide leadership on scientific, membership, financial, and organizational decisions and issues. The decisions will ultimately be made by the co-spokespersons, but will be discussed and reasoned through the \exec.  In the event that the co-spokespersons do not agree on a particular topic, the \shorte will hold a vote requiring only a majority.
 
-\item to aid the co-spokespersons in being the collaboration liaison to the Project. In the event that the co-spokespersons do not agree on a particular topic, the \shorte will hold a vote requiring only a majority.
+\item to ensure spokespersons decisions are made in the best interests of the Collaboration.  Any two \shorte members may call for a vote on any topic, and if $\geq 50\%$ of the \shorte is in disagreement with proposed activities of the spokespersons, the issue is referred to the Governing Board for further discussion. 
+
+\item to aid the co-spokespersons in being the Collaboration liaison to the Project, both in the pre-Project development phase and after it is officially established.
 
 \end{itemize}
 
@@ -240,7 +244,8 @@ The \exec \ has three main roles:
 
 \subsection{\exec \ Meetings}
 
-The Spokespersons will chair the meetings, provide the agendas, and establish rules for these meetings. The first meeting will be held no later than two weeks after the election of the Spokespersons and the Council and Committee chairs. It is expected that the board will meet no less than twice a month to ensure adequate attention to its duties. Meetings can be called on the initiative of a Spokesperson or at the request of an \shorte\ member provided that a Spokesperson agrees. A summary of the \shorte\ meetings will be distributed to the Collaboration. Each meeting requires a quorum to conduct official \shorte\ business.  It is the expectation that \shorte members participate in the majority of meetings; \shorte members who fail to participate via active live attendance or email in $\geq 50\%$ of meetings will be replaced in the nearest election cycle and barred from the \shorte for a two year term.  
+The Spokespersons will chair the meetings, provide the agendas, and establish rules for these meetings. The first meeting will be held no later than two weeks after the election of the Spokespersons and the Council and Committee chairs. It is expected that the board will meet no less than twice a month to ensure adequate attention to its duties. Meetings can be called on the initiative of a Spokesperson or at the request of an \shorte\ member provided that a Spokesperson agrees. A summary of the \shorte\ meetings will be distributed to the Collaboration. Each meeting requires a quorum to conduct official \shorte\ business.  It is the expectation that \shorte members participate in the majority of meetings; \shorte members who fail to participate %via active live attendance or email in $\geq 50\%$ 
+in a majority of meetings over a one year period will be replaced in the nearest election cycle and barred from the \shorte for a two year term.  
 
 
 \section{Elections}\label{sec:elections}
@@ -353,7 +358,7 @@ The role of the Junior Scientist Advancement Committee (JSAC) is to ensure that 
 
 \subsection{External Collaborators Committee}
 
-The role of the External Collaborators Committee (ECC) is to provide the necessary link to external follow-up observations or survey data that required to maximize the science return from CMB-S4. The ECC chair and deputy chair are appointed by the \shorte after the elections and serve terms that parallel the Collaborations elections. Additional members will volunteer to be on the committee.
+The role of the External Collaborators Committee (ECC) is to provide the necessary link to external follow-up observations or survey data that required to maximize the science return from CMB-S4. The ECC chair and deputy chair are appointed by the \shorte after the elections and serve terms that parallel those of the elected Collaboration positions. The chair will appoint additional members as required to ensure adequate knowledge of the collaborations being pursued resides in the ECC. Self nominations for consideration of ECC are expected. 
 
 The committee will draft all the necessary documents for external collaboration agreements and memorandums of understanding (MOUs). These will be presented to the co-spokespersons and \shorte who have ability the amend and alter these agreements and MOUs as they chose. Such agreements are then brought forward by the co-spokespersons to the Governing Board for final approval. \Comment{This might also fall under Project management.}
 
@@ -664,6 +669,7 @@ After the GB is established and its chair selected, the ICCC is terminated.
 CMB & Cosmic Microwave Background\cr
 Collaboration & CMB-S4 Science Collaboration\cr
 DOE & Department of Energy\cr
+ECC & External Collaborators Committee\cr
 EVC & Election and Voting Commission\cr
 \shorte & \exec\cr
 GB & Governing Board\cr
@@ -672,7 +678,7 @@ IEVC & Interim Election and Voting Commission\cr
 MC & Membership Committee\cr
 NSF & National Science Foundation\cr
 Project & CMB-S4 Construction Project\cr
-SP & Spokesperson(s)\cr
+%SP & Spokesperson(s)\cr
 WG & Working Group\cr
 \end{tabular}
 %\end{center}
