comment out sec:remove references

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -105,7 +105,7 @@ Governing Board responsibilities include, but are not limited to:  %omitted "Col
 \begin{itemize}
 \item Oversight of the overall progress, status and functioning of the Collaboration.  
 
-\item Oversight of the Spokespersons and their activities.  The GB charges the Spokespersons to prepare a yearly plan for the Collaboration.  The plan must be ratified by a supermajority vote of the GB.  The GB charges the Spokespersons to carry out specific duties for the Collaboration, including, but not limited to, collaboration reviews, and reviews of the councils and committees operating under the auspices of the Spokespersons and the \exec.  The GB may require a detailed verbal, or written report from the Spokespersons on any action. The GB may remove a Spokesperson by a supermajority vote if their performance is insufficient. See also \S\ref{sec:removal}.
+\item Oversight of the Spokespersons and their activities.  The GB charges the Spokespersons to prepare a yearly plan for the Collaboration.  The plan must be ratified by a supermajority vote of the GB.  The GB charges the Spokespersons to carry out specific duties for the Collaboration, including, but not limited to, collaboration reviews, and reviews of the councils and committees operating under the auspices of the Spokespersons and the \exec.  The GB may require a detailed verbal, or written report from the Spokespersons on any action. The GB may remove a Spokesperson by a supermajority vote if their performance is insufficient. %See also \S\ref{sec:removal}.
 
 %\item Charging the co-spokespersons to carry out specific duties for the collaboration, including, but not limited to, collaboration reviews, committee, and board reviews. 
 
@@ -120,7 +120,7 @@ Governing Board responsibilities include, but are not limited to:  %omitted "Col
 
 \item Organization of elections for Spokespersons, GB members, and other elected Collaboration officials (see \S\ref{sec:elections}).  
 
-\item Removal of any Collaboration member from an elected or appointed leadership role in the event of major failings of professional conduct,or gross insufficiency of performance.  Removal requires a supermajority vote of the GB.   Leadership roles include, but are not limited to, the Spokespersons, GB members, \shorte\ members, and Council and Committee members and chairs.  See also \S\ref{sec:removal}).
+\item Removal of any Collaboration member from an elected or appointed leadership role in the event of major failings of professional conduct,or gross insufficiency of performance.  Removal requires a supermajority vote of the GB.   Leadership roles include, but are not limited to, the Spokespersons, GB members, \shorte\ members, and Council and Committee members and chairs.  %See also \S\ref{sec:removal}).
 
 %\item Oversight of various collaboration sub-committees and councils including, but not
 %limited to: Elections, Membership, Publications, Science Council, Education and
