Changes to election text to shortedn it, and to the election cycle figure and caption.

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -181,11 +181,13 @@ Major amendments to the Bylaws, including amendments pertaining to the election 
 \section{Co-Spokespersons}
 \label{sec:spokes}
 
+
+
 \subsection{Scope}
 
 The	%scientific 
 leadership of the Collaboration resides with two equal co-spokespersons.			
-Each spokesperson participates actively in the management of all aspects of the	Collaboration and, as the executive officials of the Collaboration, both  are responsible for its day-to-day management. 
+Each spokesperson participates actively in the management of all aspects of the Collaboration and, as the executive officials of the Collaboration, both  are responsible for its day-to-day management. 
 To carry out their duties, the spokespersons are expected to solicit advice from the \exec, the GB and the Collaboration at large.  %on scientific, technical, management, financial, and leadership issues.  
 The Spokespersons may appoint up to two members of the \exec. This appointment flexibility will enable the SPs to obtain expert advice on an as-needed, short-term basis for matters including (but not limited to) technical and managerial topics that may be outside the expertise of extant Collaboration members. Such appointees required approval by the GB, 
 and may be removed from the \exec\ at the Spokespersons' discretion.  Appointments are limited to two years, but may be renewed with approval of the GB. 
@@ -243,15 +245,16 @@ The Spokespersons will chair the meetings, provide the agendas, and establish ru
 
 
 \section{Elections}\label{sec:elections}
-All elected positions of the major bodies in the CMB S4 Collaboration serve two-year terms. Elections for each of these bodies will be arranged so that $\sim 50\%$ of the members in each body will be up for election each year. 
+All elected positions of the major bodies in the CMB S4 Collaboration serve two-year terms. Most positions have term limits.  Elections for leadership roles are  arranged so that $\sim 50\%$ of the members in each body will be up for election each year.  As described in Appendix~\ref{app:first_election}, roughly half the initial terms will be for three years to allow for staggered terms to improve continuity.  Figure~\ref{fig:elect_cycle} displays the staggered terms schematically.  New appointments take office on July 1 in the year of their election.  
+
 %In this section of the bylaws the process and timing for each major election is described.  
-As there are restrictions placed on the overlap of elected officials between various governing bodies elections are timed to provide Collaboration members with multiple opportunities to participate in Collaboration governance. 
-Figure~\ref{fig:elect_cycle} displays schematically the timing of the election cycles described below.  
+%Figure~\ref{fig:elect_cycle} displays schematically the timing of the election cycles described below.  
 
-In a given election year the ordering shall proceed as follows: elections will be held first for the co-spokespersons. Next, elections will be held (if required by term completion) for the Science Council co-chairs, Membership Council chair and for the Publication and Speakers Council chair.  A third election will be held for the Governing Board members. 
-Elections for positions outside the top levels of major bodies may occur when required as such officials are not prohibited from serving other elected roles. Each election is managed by the EVC.   
+As there are restrictions on the overlap of elected officials between various governing bodies, elections are timed to provide Collaboration members multiple opportunities to participate in Collaboration governance. 
+In a given election year the ordering proceeds as follows: elections are held first for the co-Spokespersons. Next, elections are held for the Science Council co-chairs, Membership Council chair and the Publication and Speakers Council chair, as needed.  A third election is held for the Governing Board members. 
+Elections for positions outside the top levels of major bodies occur when required as such officials are not prohibited from serving other elected roles. 
 
-The yearly elections will be timed so that the new appointments are able to take office on July 1.
+Each candidate provides a Candidate Statement to the EVC, which makes them available to the Collaboration via the CMB-S4 internal web page prior to the balloting.   Votes are cast anonymously online by Voting Members, with the elections managed by the EVC, and timed to permit adequate time to evaluate the slates of nominees for each election and still assure the new appointments are able to take office on July 1.The EVC, in consultation with the GB,  determines the detailed timing of the balloting and determines procedures for dealing with any election situations not anticipated in the Bylaws.
 
 The procedures for conducting the initial elections of the Collaboration are given in Appendix~\ref{app:first_election}.
 
@@ -260,37 +263,55 @@ The procedures for conducting the initial elections of the Collaboration are giv
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=6.5in]{Election_cycle.png}
+\includegraphics[width=6.5in]{Election_cycle_v2.png}
 \end{center}
-\caption{CMB-S4 Election and appointment cycles. Note that for the cycle 1 elections 50\% of a given body will serve a 3 year term to enable staggered elections/appointments in future cycles.}
+\caption{CMB-S4 Election and appointment cycles. For the first election, $\sim\ 50$\% of the terms are for three years rather than the nominal two, to enable staggered elections/appointments going forward.}
 \label{fig:elect_cycle}
 \end{figure}
 
 \subsection{Elections of a Co-Spokesperson}
 
-Co-Spokespersons are elected to two-year terms. All senior Collaboration members (as defined in the membership section below) are allowed to run for these positions.  %presented at the GB meeting closest to January 1 each year. 
-The Co-Spokesperson elections will occur prior to elections of the Governing board. As a Co-spokesperson can not be a voting member of the GB, if a voting member of the GB is elected to a co-Spokesperson position they must resign their GB seat prior to the start of Co-Spokesperson term and this vacancy will be filled in the next GB election. 
+Co-Spokespersons are elected to two-year terms. All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions.  %presented at the GB meeting closest to January 1 each year. 
+%The Co-Spokesperson elections will occur prior to elections of the Governing board. 
+%As a Co-spokesperson can not be a voting member of the GB, if 
+If a voting member of the GB is elected as a co-Spokesperson, they must resign their GB seat prior to the start of the co-Spokesperson term and this vacancy will be filled in the next GB election. 
 
-Prior to the election, Voting Members are asked to nominate individuals to the Election and Voting Commission. Each voter may nominate one candidate and self-nominations will be accepted. %A minimum of two nominations is  required for a nominee to be eligible to appear on the slate of election candidates. 
-After a nomination period, the election committee  will consult with the nominees to ascertain their willingness to stand for the election.
+Prior to the election, Voting Members are asked to nominate individuals for Spokesperson to the Election and Voting Commission. Each voter may nominate one candidate and self-nominations are accepted. %A minimum of two nominations is  required for a nominee to be eligible to appear on the slate of election candidates. 
+After a nomination period, the EVC will consult with the nominees to ascertain their willingness to stand for the election.
+Each Voting Member votes for a single candidate for each open Spokesperson position. In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. 
 
-If no candidate agrees to stand for election, the terminating co-spokesperson will continue to serve for six months, after which a special election will be held. The term of the individual elected in a special election will be reduced by the amount needed to cause the sum of his/her term and the additional months served by the terminating co-spokesperson to equal two years.
+%The elected candidates will take office when the EVC announces the results of the election to the Collaboration via email. 
 
-The election is held through an on-line poll, with votes submitted by Voting Members. The EVC will preside over the election results. Each candidate will provide a Candidate Statement to the EVC, which will collect these documents and make them available to the Collaboration via the CMB-S4 internal web page prior to the balloting. The EVC, in consultation with the GB  determines the detailed timing of the balloting and determines procedures for dealing with any election situations not anticipated in the bylaws. Each Voting Member votes for a single candidate for each vacant position. %; in the first election, in which two Spokespersons will be selected, collaboration members may vote for two candidates. 
+If no candidate agrees to stand for election, the terminating co-Spokesperson will continue to serve for six months, after which a special election will be held. The term of the individual elected in a special election will be reduced by the amount needed to cause the sum of their term and the additional months served by the terminating co-spokesperson to equal two years.
+
+
+%The election is held through an on-line poll, with votes submitted by Voting Members. The EVC will preside over the election results. Each candidate will provide a Candidate Statement to the EVC, which will collect these documents and make them available to the Collaboration via the CMB-S4 internal web page prior to the balloting. The EVC, in consultation with the GB  determines the detailed timing of the balloting and determines procedures for dealing with any election situations not anticipated in the bylaws. Each Voting Member votes for a single candidate for each vacant position. %; in the first election, in which two Spokespersons will be selected, collaboration members may vote for two candidates. 
 
 %The EVC checks the ballots against the list of qualified voters and tallies the votes. 
 %For the first election, the two candidates with the most votes will be elected Spokesperson, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons.  
-In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. The elected candidates will take office when the EVC announces the results of the election to the Collaboration via email. 
+%In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. The elected candidates will take office when the EVC announces the results of the election to the Collaboration via email. 
 
-\subsection{\exec}
-Following conclusion of the Spokesperson election, elections for various elected positions on the \exec \ will be held during the final year of each position's two-year cycle. The process for these elections proceeds in an identical fashion as to the Spokesperson election. 
+\subsection{Council and Committee Chairs}
+The co-chairs of the Science Council, and the chairs of the Membership Committee and the Publication and Speakers Committee are elected to two-year terms. All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions.  If a voting member of the GB is elected to one of these positions, they must resign their GB seat prior to taking office as chair, and this vacancy will be filled in the next GB election. 
+
+Prior to the election, Voting Members are asked to nominate individuals for the chair positions to the EVC.   Self-nominations are accepted.
+After a nomination period, the EVC will consult with the nominees to ascertain their willingness to stand for the election.
+Each Voting Member votes for a single candidate for each  open  chair position. In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. 
+
+If no candidate agrees to stand for election, the terminating chair will continue to serve for six months, after which a special election will be held. The term of the individual elected in a special election will be reduced by the amount needed to cause the sum of their term and the additional months served by the terminating chair to equal two years.
+
 
 \subsection{Governing Board Elections }
 \label{sec:gb-elections}
+The GB members are elected to two-year terms.  All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions. 
 
-Every year, following completion of the co-spokesperson election and any required \exec \ elections, the EVC then carries out elections for seats on the Governing Board whose term is expiring in less than 12 months. The EVC first solicits self-nominations for Governing Board membership and candidate information is then circulated to qualified electors as defined in the membership section of these bylaws. 
+Prior to the election, Voting Members are asked to nominate individuals for the GB to the EVC.   Self-nominations are accepted. After a nomination period, the EVC will consult with the nominees to ascertain their willingness to stand for the election.
+Each Voting Member votes for a single candidate for each vacant GB position.  % In the event of a tie for the last open position, a runoff election will be held between the two candidates that have the same number of votes. 
+
+
+%Every year, following completion of the co-spokesperson election and any required \exec \ elections, the EVC then carries out elections for seats on the Governing Board whose term is expiring in less than 12 months. The EVC first solicits self-nominations for Governing Board membership and candidate information is then circulated to qualified electors as defined in the membership section of these bylaws. 
 %Electors vote via email, with the votes tabulated by the EVC members not standing for election (or, in cases where the whole committee is conflicted, by a third party appointed by the Co-Spokespersons). 
-Each Voting Member may vote for up to 10 candidates, or fewer as mandated by the EVC.
+%Each Voting Member may vote for up to 10 candidates, or fewer as mandated by the EVC.
 % of the total number of board members. 
 
 After the initial GB is established, it is to amend these bylaws to establish whether to have separate votes different categories of representation on the GB or to continue with a mixed election/appointed governing board model as described in Appendix~\ref{app:first_election}. It is the expectation that the GB be evolve to a fully elected body as the Collaboration matures.
@@ -304,7 +325,7 @@ After the initial GB is established, it is to amend these bylaws to establish wh
  %After the collaboration is established, the GB is to amend these bylaws to establish whether to have separate votes for each category of representation or to continue with a mixed election/appointed governing board model. It is the expectation that the GB be moved to a fully elected body as the collaboration matures. 
 
 \subsection{All Other Elected Positions}
-For other elected Collaboration roles, the EVC is charged with establishing election rules and conducting these elections. Note that the committee \textbf{can not} make voting requirements more restrictive than those for the main body elections. Terms of elected positions are limited to durations of at most 2 years. 
+For other elected Collaboration roles, the EVC is charged with establishing election rules and conducting these elections. Note that the EVC cannot make voting requirements more restrictive than those for the main body elections. Terms of elected positions are limited to durations of at most two years. 
 
 \section{Councils and Committees}
 \label{sec:councils}
@@ -373,6 +394,7 @@ and others who contribute significantly to the CMB-S4 program. Membership convey
 %The duties of the Membership Council are to review and evaluate membership applications, review annual activity reports, and recommend changes in membership status. 
 
 \subsection{Membership Types}
+\label{sec:memtypes}
 Five types of members are defined here.  
 \begin{itemize}
 
