--- a/bylaws.tex
+++ b/bylaws.tex
@@ -217,7 +217,7 @@ Spokesperson responsibilities include, but are not limited to the following:
 
 %Additionally, the co-spokespersons are ex-officio, non-voting members of the Governing Board.  
 %\textit{The Governing Board, via super-majority vote, may amend these duties.} 
-Spokespersons are elected to two-year terms. The election process is detailed below in Section \ref{sec:elections}.   To facilitate interactions of the Collaboration with the agencies and national laboratories, term limits will not be required prior to the establishment of the Project.  Two term limits are expected to be imposed by the GB amendment of the Bylaws after the CMB-S4 Construction Project is firmly established with the Project leadership team in place. 
+Spokespersons are elected to two-year terms. The election process is detailed below in \S\ref{sec:elections}.   To facilitate interactions of the Collaboration with the agencies and national laboratories, term limits will not be required prior to the establishment of the Project.  Two term limits are expected to be imposed by the GB amendment of the Bylaws after the CMB-S4 Construction Project is firmly established with the Project leadership team in place. 
 
 
 
@@ -444,7 +444,7 @@ Just as for the hardware, we anticipate having a collaboration-wide architecture
 
 
 \subsection{Membership Application and Approval Process}
-After the Collaboration is formed with a first set of initial members (see Section \ref{sec:initmembership}), the process for membership to CMB-S4 will be as specified below.
+After the Collaboration is formed with a first set of initial members (see \S\ref{sec:initmembership}), the process for membership to CMB-S4 will be as specified below.
 
 \begin{itemize}
 
@@ -669,10 +669,10 @@ These bylaws may be amended by the GB. A new bylaw or an amendment may be presen
 For the initial election procedures the ICCC replaces the role of the GB, and an Interim Election and Voting Commission (IEVC) appointed by the ICCC conducts the elections and voting. 
 
 \subsubsection{First Election of Co-spokespersons} 
-The IEVC follows the election process as described in section~\ref{sec:elections} of the Bylaws.  Collaboration members may vote for two candidates The two candidates with the most votes will be elected Spokesperson, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons as illustrated in Figure~\ref{fig:elect_cycle}.
+The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws.  Collaboration members may vote for two candidates The two candidates with the most votes will be elected Spokesperson, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons as illustrated in Figure~\ref{fig:elect_cycle}.
 
 \subsubsection{First Election of the Governing Board}
-The IEVC follows the election process as described in section~\ref{sec:elections} of the Bylaws.  Prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including, e.g., tenure-track and early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc.). For the first election, the top 10 vote-receiving candidates are automatically selected for the GB. If the representation requirements outlined above are unfulfilled by the elected candidates, the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this juncture the  ICCC is empowered to make appoint the remaining seats to meet these requirements, drawing from the list of nominated candidates. 
+The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws.  Prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including, e.g., tenure-track and early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc.). For the first election, the top 10 vote-receiving candidates are automatically selected for the GB. If the representation requirements outlined above are unfulfilled by the elected candidates, the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this juncture the  ICCC is empowered to make appoint the remaining seats to meet these requirements, drawing from the list of nominated candidates. 
 To enable offset elections (to ensure an element of continuity in the GB), 50\% of the first GB members will serve 3 year terms as determined by random draw. 
 
 After the GB is established, it is to amend these bylaws to establish whether to have separate votes for each category of representation or to continue with a mixed election/appointed governing board model. It is the expectation that the GB will evolve to a fully elected body as the Collaboration matures. 
