--- a/bylaws.tex
+++ b/bylaws.tex
@@ -1,4 +1,4 @@
- \documentclass[12pt]{article}
+\documentclass[12pt]{article}
 \usepackage{amssymb,amsmath}
 \usepackage[pdftex]{graphicx}
 \usepackage{epsfig,subfigure}
@@ -11,6 +11,7 @@
 
 \textheight = 522pt
 \textwidth = 450pt
+
 \oddsidemargin 0.0in
 
 \newcommand{\Comment}[1]{\textcolor{Blue}{(Comment: #1)}}
@@ -28,7 +29,7 @@
 
 \begin{document}
 
-\title{CMB-S4 Collaboration Bylaws}
+\title{CMB-S4 Science Collaboration Bylaws}
 \maketitle
 
 
