--- a/bylaws.tex
+++ b/bylaws.tex
@@ -87,9 +87,9 @@ The governance structure of the CMB-S4 Collaboration  is illustrated in Figure~\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=6.5in]{CMB-S4_Org_chart_+_details_v7.pdf}
+\includegraphics[width=6.5in]{CMB-S4_Org_chart_+_details_v8.pdf}
 \end{center}
-\caption{CMB-S4 Collaboration Organizational Chart version 4}
+\caption{CMB-S4 Collaboration Organizational Chart}
 \label{fig:org_chart}
 \end{figure}
 
